[tool.poetry]
name = "wombeats"
version = "0.1.0"
description = ""
authors = ["mt1004 <min.chieh.tsai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
spotipy = "^2.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
